--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Nodejs Course Series ",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "start": "node app.js"
   },
   "author": "Islem Penywis",
   "license": "MIT ",
